# Yamchd

./: CMakeLists.txt  main.cpp  vcpkg.json
include/: resources_path.hpp
sdl2_wrappers/: sdl2_texture.hpp
src/: game.cpp  game.hpp  palette.hpp  world.cpp  world.hpp
